# pytest-coverage-example

.github/workflows/: test.yml
folder1/: pyproject.toml
folder1/module1/: module_1a.py  test_module_1a.py
folder2/: pyproject.toml
folder2/module2/: module_2a.py  test_module_2a.py
