[project]
name = "example"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
requires-python = ">=3.9,<3.13"

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
coverage = "^7.8.0"

[build-system]
requires = ["poetry-core >= 2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
omit = [
	"**/test_*.py",
	"**/__init__.py"
]
